--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
-<HTML>
+<!DOCTYPE html>
+<HTML lang="en">
 	<head>
   		<meta name="viewport" content="width=device-width, initial-scale=1.0">
   		<meta charset="UTF-8">
         <link href = "css/bootstrap.min.css" rel = "stylesheet">
-        <link href = "css/styles.css" rel = "stylesheet">		
-        <script language="JavaScript" src="electron.js" type="text/javascript"></script>
+        <link href = "css/styles.css" rel = "stylesheet">	
+        <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>	
 	</head> 
 	<body>
-	 	<div class = "container">
-			<div id="form">
-				<form action="javascript:printElement()">
-					<input type="text" name="element" id="element">
-					<button type="submit">Submit</button>
-				</form>
-			</div>
-
-			<div id="config">
+		<div class = "navbar navbar-inverse navbar-static-top">
+			<div class="container">
+				<div id="form" class="navbar-form">
+					<form action="javascript:inputElement()">
+						<input type="text" name="element" id="element" placeholder="Element">
+						<button type="submit">Submit</button>
+					</form>
+				</div>
 			</div>
 		</div>
 
-		<script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	    <div class ="col-lg-9">
+		    <div class="container">
+				<div id="config"></div>
+			</div>
+		</div>
+
+
+		<div class = "col-lg-3" id="elements-menu"></div>
+
+
+
+		<script src="electron.js"></script>
         <script src = "js/bootstrap.js"></script>
 	</body>
 </HTML>
