--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 			</div>
 		</div>
 
+
+		<div id="alert">
+		</div>
+
+
 	    <div class ="col-lg-9">
 		    <div class="container">
 				<div id="config"></div>
@@ -27,8 +32,6 @@
 
 
 		<div class = "col-lg-3" id="elements-menu"></div>
-
-
 
 		<script src="electron.js"></script>
         <script src = "js/bootstrap.js"></script>
