--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class = "col-lg-3" id="elements-menu"></div>
 
-		<script src="electron.js"></script>
+		<script src="PeriodicTable.js"></script>
         <script src = "js/bootstrap.js"></script>
 	</body>
 </HTML>
